style.css
/* ... */
dd + dt {
    margin-top: 1.5rem;
}

/* Quotes ------------------------------------ */

blockquote {
    border-color: #cd2653;
    border-style: solid;

    /*rtl:ignore*/
    border-width: 0 0 0 0.2rem;
    color: inherit;
    font-size: 1em;
    margin: 4rem 0;

    /*rtl:ignore*/
    padding: 0.5rem 0 0.5rem 2rem;
}

cite {
    color: #6d6d6d;
    font-size: 1.4rem;
    font-style: normal;
    font-weight: 600;
    line-height: 1.25;
}

blockquote cite {
    display: block;
    margin: 2rem 0 0 0;
}

blockquote p:last-child {
    margin: 0;
}

/* Code -------------------------------------- */

code,
kbd,
pre,
samp {
    font-family: monospace;
    font-size: 0.9em;
    padding: 0.4rem 0.6rem;
}

code,
kbd,
samp {
    background: rgba(0, 0, 0, 0.075);
    border-radius: 0.2rem;
}

pre {
    border: 0.1rem solid #dcd7ca;
    line-height: 1.5;
    margin: 4rem 0;
    overflow: auto;
    padding: 3rem 2rem;
    text-align: left;
}

pre code {
    background: transparent;
    padding: 0;
}

/* Media ------------------------------------- */

figure {
    display: block;
    margin: 0;
}

iframe {
    display: block;
    max-width: 100%;
}

video {
    display: block;
}

figcaption,
.wp-caption-text {
    color: #6d6d6d;
    display: block;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 1.5rem;
}

figcaption a,
.wp-caption-text a {
    color: inherit;
}

blockquote.instagram-media,
iframe.instagram-media {
    margin: auto !important;
}

/* Base Transitions -------------------------- */

a,
path {
    transition: all 0.15s linear;
    /* width: 100%; */
    color: #9d9283;
}

li,
ul {
    transition: all 0.15s linear;
    /* width: 100%; */
}

.entry-content {
    line-height: 1.5;
    padding-bottom: 80px;
    padding: 0 16px;
}

.entry-content > * {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.25em;
}

.entry-content > *:first-child {
    margin-top: 0;
}

.entry-content > *:last-child {
    margin-bottom: 30px !important;
}

.read-more-button-wrap {
    margin-top: 1em;
    text-align: center;
}

.entry-content a:hover,
.entry-content a:focus {
    text-decoration: underline;
}

.entry-content p,
.entry-content li {
    line-height: 1.4;
}

.entry-content h1,
.entry-content h2,
.entry-content h3,
.entry-content h4,
.entry-content h5 {
    margin: 3.5rem auto 2rem;
}

.entry-content ul ul,
.entry-content ol ol,
.entry-content ul ol,
.entry-content ol ul {
    margin-bottom: 1rem;
}

.entry-content hr {
    margin: 4rem auto;
}

/* Font Families ----------------------------- */

.entry-content p,
.entry-content ol,
.entry-content ul,
.entry-content dl,
.entry-content dt {
    font-family: 'Merriweather', serif;
    font-size: 17px;
    letter-spacing: normal;
}

.entry-content cite,
.entry-content figcaption,
.entry-content .wp-caption-text {
    font-family: merriweather, "open-sans", sans-serif;
}

@supports (font-variation-settings: normal) {
    .entry-content cite,
    .entry-content figcaption,
    .entry-content .wp-caption-text {
        font-family: merriweather, "open-sans", sans-serif;
    }
}

/* Alignment Classes ------------------------- */

.entry-content
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
    max-width: 800px;
    /* width: calc(100% - 4rem);*/
}

[class*="__inner-container"]
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
    max-width: 800px;
    width: 100%;
}

.alignnone,
.aligncenter,
.alignleft,
.alignright,
.alignwide {
    margin-top: 4rem;
    margin-right: auto;
    margin-bottom: 4rem;
}

[class*="__inner-container"]
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright) {
    margin-left: auto;
    margin-right: auto;
}

/* Full */

.alignfull {
    max-width: 100vw;
    position: relative;
    margin: 5rem -16px 5rem -56px;
}

[class*="__inner-container"] > .alignfull {
    max-width: 100%;
}

/* Wide */


[class*="__inner-container"] > .alignwide {
    width: 100%;
}

/* Center */

.aligncenter,
.aligncenter img {
    margin-left: auto;
    margin-right: auto;
}

/* Left and right */

.alignleft,
.alignright {
    max-width: 50%;
}

.alignleft {
    /*rtl:ignore*/
    float: left;
    margin: 3.1rem 2rem 2rem 2rem;
}

.alignright {
    /*rtl:ignore*/
    float: right;
    margin: 3.1rem 2rem 2rem 2rem;
}

[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> .alignleft,
[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> p
.alignleft,
[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> .wp-block-image
.alignleft {
    /*rtl:ignore*/
    margin-left: 2rem;
}

[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> .alignright,
[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> p
.alignright,
[class*="wp-block"].alignfull:not(.has-background)
[class*="__inner-container"]
> .wp-block-image
.alignright {
    /*rtl:ignore*/
    margin-right: 2rem;
}

/* Entry Media ------------------------------- */

.alignfull > figcaption,
.alignfull > .wp-caption-text {
    margin-left: auto;
    margin-right: auto;
    max-width: 58rem;
    width: calc(100% - 4rem);
}

@media (max-width: 479px) {
    /* Entry Content ------------------------- */
    .alignwide {
        max-width: 120rem;
        position: relative;
        /*width: calc(100% - 4rem);*/
    }

    /* LISTS */
    ul,
    ol {
        margin: 0 0 3rem 2rem;
        margin-left: 2rem !important;
    }

    li {
        margin: 0.5rem 0 0 1rem;
    }
}
/* ... */

